add get followers and following end points
